# NetworkAnalyzer

./: .gitignore  Cargo.toml  NetworkAnalyzerDocumentation.lnk  Network_analyzer_documentation.lnk  README.md  report_ste.txt
NetworkAnalyzer_Binary/: Cargo.toml  ProvaDefinitiva.csv  ProvaDefinitiva2.csv  ProvaDefinitiva3.csv  prova12.txt  reportProva.txt  test.csv
NetworkAnalyzer_Binary/.cargo/: config.toml
NetworkAnalyzer_Binary/results/: ai.csv  dscndsncvd....csv  provaaml3.csv  si.csv  test.csv
NetworkAnalyzer_Binary/src/: main.rs
NetworkAnalyzer_Library/: Cargo.toml
NetworkAnalyzer_Library/src/: argparse.rs  lib.rs  structures.rs
NetworkAnalyzer_Library/tests/: lib_tests.rs
binary/: Cargo.toml  esempio.txt  foo.txt  report.txt  testSave.pcap
binary/src/: args.rs  main.rs
src/: args.rs  libreria.rs  main.rs
