[package]
name = "untitled"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "mylib"
path = "../library/src/lib.rs"


[[bin]]
name = "mybin"
path = "src/main.rs"


[dependencies]
pcap = "0.10.1"
indicatif = "0.17.1" #si può usare??
env_logger = "0.9.0"
clap = { version = "3.2.21", features = ["derive"] }
