[package]
name = "NetworkAnalyzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


#[lib]
#name= "mylib"
#path= "../library/src/lib.rs"


[[bin]]
name = "mybin"
path = "src/main.rs"


[dependencies]
library = {path="../library"}
pcap = "0.10.1"
indicatif = "0.17.1" #si può usare??
env_logger = "0.9.0"
clap = { version = "3.2.21", features = ["derive"] }
rpcap = { version = "1.0.0", features = ["time"] }
pdu = "1.4.2"
serde = { version = "1.0", features = ["derive"] }
dns-parser = "0.8.0"
# Each data format lives in its own crate; the sample code below uses JSON
# but you may be using a different one.
serde_json = "1.0"
chrono = "0.4"
csv = "1.1"

